Fix too small font size in games.html and series.html

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,10 @@ main {
     width: 100%;
 }
 
+p {
+    font-size: 120%;
+}
+
 nav .menu img {
     filter: invert();
     margin-top: 10px;
